ui/scss/component/_livestream.scss
/* ... */
.livestream__discussion {
  width: 100%;
  background-color: var(--color-header-background);
  border-radius: var(--border-radius);
  margin-bottom: var(--spacing-m);

  .credit-amount {
    font-weight: unset;
  }

  .button-toggle--active {
    .credit-amount {
      color: var(--color-primary-contrast);
    }
  }
  .button__label {
    svg {
      margin-bottom: unset;
    }
  }

  @media (min-width: $breakpoint-medium) {
    margin: 0;
    width: var(--livestream-comments-width);
    height: calc(100vh - var(--header-height) - var(--spacing-l));
    position: absolute;
    right: 0;
    top: 0px;
    bottom: 0;
    border-top: none;
    border-bottom: none;
    border-right: none;

    .livestream-discussion__title {
      margin-left: 0;

      .menu__button {
        opacity: 1;
      }
    }

    .card__main-actions {
      padding: 0;
    }

    .recommended-content__toggles {
      margin-right: var(--spacing-xs);

      .button-toggle:nth-child(2) {
        margin-left: 2px;
      }

      .button-toggle--active {
        &:hover {
          p,
          span {
            color: var(--color-primary-contrast) !important;
          }
        }
      }

      .button-toggle {
        background-color: rgba(var(--color-primary-dynamic), 0.08);

        &:hover {
          background-color: rgba(var(--color-primary-dynamic), 0.1);
          p,
          span {
            color: var(--color-primary);
          }
        }
      }
    }
  }

  // Mobile
  @media (max-width: $breakpoint-small) {
    .button-toggle:last-of-type {
      margin-right: var(--spacing-xs);
    }

    .livestream-discussion__title {
      margin-left: var(--spacing-xs);
    }

    .livestream-superchats__wrapper {
      padding-left: var(--spacing-xs);
    }

    .livestream__comments-wrapper {
      .button__label {
        color: var(--color-secondary);
      }
      .button__content {
        color: var(--color-primary);
      }

      .section__actions {
        .button__label {
          color: var(--color-primary-contrast);
        }
      }
    }

    @media all and (orientation: landscape) {
      // height:unset;
      height: calc(100vw - var(--header-height) - var(--spacing-l));

      .livestream__comments-wrapper {
        height: calc(100vw - var(--header-height) - 3rem - var(--spacing-l));
      }
    }
    // min-height: calc(100vh - var(--header-height) - var(--spacing-l));
  }

  .comment__author {
    color: rgba(var(--color-text-base), 0.5);
    margin-top: var(--spacing-xxs);
    max-width: unset;
    &:hover {
      color: var(--color-primary) !important;
    }
  }

  .channel-name {
    color: var(--color-secondary);
    &:hover {
      color: var(--color-primary);
    }
  }
}

.livestream-discussion__header {
  border-bottom: 1px solid var(--color-border);
  padding-bottom: var(--spacing-s);
  margin-bottom: 0;
  align-items: center;

  .recommended-content__toggles {
    button {
      height: unset;
      padding: 5px;
    }

    .button__label {
      max-height: 18px;
    }
  }

  @media (min-width: $breakpoint-small) {
    height: $discussion-header__height;
    padding: 0 var(--spacing-s);
    padding-right: 0;
  }

  @media (max-width: $breakpoint-small) {
    padding: var(--spacing-xxs);
  }
}

.livestream-discussion__title {
  @extend .card__title-section;
  @extend .card__title-section--small;
  display: flex;
  align-items: center;
  padding: 0;

  .menu__button {
    margin-left: var(--spacing-xxs);
  }

  @media (max-width: $breakpoint-small) {
    .menu__button {
      margin-left: 5px;
    }
  }
}

.livestream__comments-wrapper {
  display: flex;
  flex-direction: column;
  height: calc(100vh - var(--header-height) - #{$discussion-header__height} - var(--spacing-l));
}

.livestream__comments {
  display: flex;
  flex-direction: column-reverse;
  font-size: var(--font-small);
  overflow-y: scroll;
  overflow-x: visible;
  padding-top: var(--spacing-s);
  width: 100%;
}

.livestream-comment {
  list-style-type: none;
  position: relative;

  .date_time {
    color: var(--color-text-subtitle);
    opacity: var(--live-timestamp-opacity);
  }

  &:hover {
    .date_time {
      opacity: 0.5;
    }
  }

  @media (min-width: $breakpoint-small) {
    &:hover {
      background-color: rgba(var(--color-primary-dynamic), 0.1);

      .menu__button {
        opacity: 1;
      }

      .comment__author {
        color: var(--color-primary);
      }
    }

    &:not(:hover) {
      .menu__button:not(:focus):not([aria-expanded='true']) {
        opacity: 0;
      }
    }
  }

  .channel-name {
    font-size: var(--font-xsmall);
  }
}

.livestream-comment--mentioned {
  background-color: var(--color-card-background-highlighted);
}

.livestream-comment__info {
  overflow: hidden;
}

.livestream-comment--superchat {
  background-color: rgba(var(--color-primary-dynamic), 0.03);

  + .livestream-comment--superchat {
    margin-bottom: var(--spacing-xxs);
  }

  .livestream-comment__body {
    display: flex;
    align-items: flex-start;
    flex-direction: unset;
    flex: unset;
  }

  .livestream-comment__info {
    margin-top: calc(var(--spacing-xxs) / 2);
  }

  &::before {
    position: absolute;
    left: 0;
    height: 100%;
    max-height: 4rem;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    width: 5px;
    background-color: var(--color-superchat);
    content: '';
  }
}

.livestream-comment__body {
  display: flex;
  align-items: flex-start;
  margin-left: var(--spacing-s);
  overflow: hidden;

  .livestream-comment__info--sticker {
    display: flex;
    margin: var(--spacing-xxs) 0;
  }

  .channel-thumbnail {
    @include handleChannelGif(2rem);
    margin-top: var(--spacing-xxs);
    flex-shrink: 0;
  }
}

.livestream-comment__menu {
  position: absolute;
  right: var(--spacing-xs);
  top: var(--spacing-xs);
}
/* ... */

